--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sabin-portfolio",
   "version": "0.1.0",
+  "homepage": "https://sabin.github.io/sabin-portfolio",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -15,6 +16,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,6 +46,7 @@
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
+    "gh-pages": "^6.2.0",
     "prettier": "3.3.3",
     "tailwindcss": "^3.4.14"
   }
