--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sabin-portfolio",
   "version": "0.1.0",
-  "homepage": "https://sabin.github.io/sabin-portfolio",
+  "homepage": "https://sawin0.github.io/portfolio",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
